# jdf

./: Cargo.toml  README.md
jdf/: Cargo.toml
jdf-addons/: Cargo.toml
jdf-addons/src/: lib.rs  sample.rs
jdf-core/: Cargo.toml
jdf-core/src/: condition.rs  custom.rs  error.rs  jdf.rs  lib.rs  query.rs  statement.rs
jdf-ffi/: Cargo.toml
jdf-ffi/src/: lib.rs
jdf/src/: main.rs
