[package]
name = "jdf"
version = "0.1.0"
authors = ["yutapok <yutautsugi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name= "jdf"
path = "jdf/src/main.rs"

[lib]
name = "jdf_core"
path = "jdf-core/src/lib.rs"


[dependencies]
serde = '*'
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

