[package]
name = "jdf-core"
version = "0.1.0"
authors = ["yutapok <yutautsugi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
serde = '*'
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
