[package]
name = "jdf-ffi"
version = "0.1.0"
authors = ["yutapok <yutautsugi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jdf_sys"
crate_type = ["dylib"]

[dependencies]
jdf_core = { path = "../jdf-core" }
jdf_addons = { path = "../jdf-addons" }
libc = "*"
serde = '*'
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

